@@ -222,13 +222,20 @@ void CLI::applyHistoryLimit()
 
 void CLI::openDbFile(const QString& path)
 {
+    Db* db = DBLIST->getByPath(path);
+    if (db)
+    {
+        println(tr("Database passed in command line parameters (%1) was already on the list under name: %2").arg(path, db->getName()));
+        return;
+    }
+
     QString name = DBLIST->quickAddDb(path, QHash<QString,QVariant>());
     if (name.isNull())
     {
         println(tr("Could not add database %1 to list.").arg(path));
         return;
     }
-    Db* db = DBLIST->getByName(name);
+    db = DBLIST->getByName(name);
     setCurrentDb(db);
 }
 
