@@ -1,4 +1,5 @@
 [3.0.3]
+        * [ADDED]: Added visual validation indicators to DbDialog, so user is informed why the "Ok" button is disabled at the moment.
         * [BUGFIX]: Fixed support for "function(DISTINCT args)" in Enterprise formatter.
         * [BUGFIX]: #2753 Fixed parsing TEMP and IF NOT EXISTS in CREATE TABLE statement.
         * [BUGFIX]: #2755 Fixed error checking for recurrent expression with LIKE/GLOB operator in it.
@@ -6,6 +7,7 @@
         * [BUGFIX]: #2760 Fixed marking "unique" in index dialog when opening existing unique index.
         * [BUGFIX]: #2757 Fixed int64 rounding problem.
         * [BUGFIX]: #2767 Fixed NOT NULL dialog in column dialog, so it doesn't convert to UNIQUE.
+        * [BUGFIX]: #2763 Fixed possibility of adding 2 same databases to the list.
 
 [3.0.2]
         * [ADDED]: Full support for the interface translations.
